--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
   <div class="container">
     <h1>Tiny Bonkers ✨</h1>
     <p>
-      Magische, handgemachte Kleinigkeiten & Geschenke.<br>
-      Für alle, die ein bisschen Zauber im Alltag lieben.
+      Hier findest du handgemachte, magisch angehauchte Kleinigkeiten & Geschenke.
     </p>
 
     <a
