--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Tiny Bonkers ✨</h1>
+    <h1>✨ Tiny Bonkers ✨</h1>
     <p>
       Hier findest du handgemachte, magisch angehauchte Kleinigkeiten & Geschenke.
     </p>
