--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
   <div class="container">
     <h1>✨ Tiny Bonkers ✨</h1>
     <p>
-      Hier findest du handgemachte, magisch angehauchte Kleinigkeiten & Geschenke.
+      Hier findest du handgemachte, magisch angehauchte <br>
+      Kleinigkeiten & Geschenke.
     </p>
 
     <a
